# itron_training_hos

./: .gitmodules  LICENSE  NOTICE.md  README.md
.github/workflows/: CI-aplfw-sample_win32-VS2017.yml  CI-aplfw-sample_win32-clang_ninja.yml  CI-aplfw-sample_win32.yml  CI-dev-googlemock.yml  CI-dev-googletest.yml  CI-dev-vter_knl.yml  CI-dev.yml  CI-hos_cfgrtr.yml  CI-hos_lib.yml  CI-sample-sample_win32-VS2017.yml  CI-sample-sample_win32-clang_ninja.yml  CI-sample-sample_win32.yml  CI-sample-sample_win32_cli-VS2017.yml  CI-sample-sample_win32_cli-clang_ninja.yml  CI-sample-sample_win32_cli.yml  CI-sample_win32.yml  CI-sample_win32_cli.yml
aplfw/sample_win32/: CMakeLists.txt  README.md  cmake_VS2017.bat
dev/: build.bat  clean.bat
dev/extension/aplfw/: CMakeLists.txt
dev/extension/aplfw_cli/: CMakeLists.txt
dev/extension/sample/: CMakeLists.txt  HockTaskSwitch.cpp  HockTaskSwitch.h  cmake_Ninja.bat
dev/extension/sample_cli/: CMakeLists.txt
dev/googlemock/: CMakeLists.txt  gmock_hos_main.cpp  mock_my_rand.cpp  mock_my_rand.hpp  sample_test.cpp
dev/googletest/: CMakeLists.txt  cmake_VS2017.bat  gtest_hos_main.cpp  my_rand.cpp  my_rand.h  sample_test.cpp
dev/set_thread_name/: CMakeLists.txt
dev/vter_knl/: CMakeLists.txt
doc/draw.io/: 名称未設定ファイル.drawio
hos_sample_cmake/: build.bat  clean.bat
hos_sample_cmake/aplfw/sample_win32/: CMakeLists.txt
hos_sample_cmake/sample/sample_win32/: CMakeLists.txt  README.md
hos_sample_cmake/sample/sample_win32_cli/: CMakeLists.txt  README.md
lib/cmake_hos-v4a_win32/: build.bat  clean.bat
lib/cmake_hos-v4a_win32/aplfw/: CMakeLists.txt  libhosaplfw.cmake
lib/cmake_hos-v4a_win32/aplfw_ex/: CMakeLists.txt
lib/cmake_hos-v4a_win32/cfgrtr/: CMakeLists.txt  h4acfg-win32.cmake
lib/cmake_hos-v4a_win32/cfgrtr_ex/: CMakeLists.txt
lib/cmake_hos-v4a_win32/compile_option/: compile_opion_helper.cmake
lib/cmake_hos-v4a_win32/configure_file/: launch.json.in  vs_vscode.cmake
lib/cmake_hos-v4a_win32/kernel/: CMakeLists.txt  libhosv4a.cmake
lib/cmake_hos-v4a_win32/kernel_ex/: CMakeLists.txt  libhosv4a_ex.cmake
lib/cmake_hos-v4a_win32/sample/: CMakeLists.txt  sample.cmake
lib/cmake_tlsf/: CMakeLists.txt  cmake_Ninja.bat  cmake_VS2017.bat  tlsf_sample.c  tlsf_sample.cpp
lib/cmake_utility/compile_option/: compile_opion_helper.cmake
lib/cmake_utility/configure_file/: coverage.bat.in  launch.json.in  run_cmake-gui.bat.in  run_cmake.bat.in  run_cmake_--build.bat.in  tasks.json.in  vs_vscode.cmake
lib/for_hos-v4a/HockTaskSwitch/: CMakeLists.txt  HockTaskSwitch.cpp  HockTaskSwitch.h
lib/for_hos-v4a/mpf_log/: CMakeLists.txt  mpf_log.cpp  mpf_log.h  mpf_log.hpp
lib/set_thread_name/: CMakeLists.txt  set_thread_name.cpp  set_thread_name.h
sample/sample_win32/: README.md
sample/sample_win32_cli/: CMakeLists.txt  README.md
sample_win32/: CMakeLists.txt  README.md  ksta_ctx.c
sample_win32_cli/: CMakeLists.txt  README.md
